[feat]: Initialize NestJS application with TypeORM
Adding Nest.js framework and initial config graphql and typeorm. Also configure linter with biome and clean up the project structure.

- two endpoins were created in graphql.
 - Hello which just return a string message
 - health to check service's health

 Closes: #65

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,44 @@
-.vscode
-node_modules
+# Dependencies
+node_modules/
+.pnpm-debug.log*
+
+# Build outputs
+dist/
+build/
+
+# Environment files
 .env
-create0banking-cards.js
+.env.local
+.env.*.local
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+pnpm-debug.log*
+
+# Coverage
+coverage/
+.nyc_output/
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+
+# Database
+*.sqlite
+*.db
+
+# Custom
+create-banking-cards.js
