--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,13 @@ jobs:
   test:
     name: Tests and Quality Checks
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      pull-requests: write
+      actions: read
+      security-events: write
+      checks: write
     
     services:
       postgres:
