--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,11 +30,11 @@ jobs:
       postgres:
         image: postgres:15.4
         env:
-          POSTGRES_DB: ${{ DB_TEST_NAME }}
-          POSTGRES_USER: ${{ DB_TEST_USER }}
+          POSTGRES_DB: ${{ secrets.DB_TEST_NAME }}
+          POSTGRES_USER: ${{ secrets.DB_TEST_USER }}
           POSTGRES_PASSWORD: ${{ secrets.DB_TEST_PASSWORD }}
         ports:
-          - ${{ DB_TEST_PORT }}:5432
+          - ${{ secrets.DB_TEST_PORT }}:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -45,10 +45,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js ${{ NODE_VERSION }}
+      - name: Setup Node.js ${{ secrets.NODE_VERSION }}
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ NODE_VERSION }}
+          node-version: ${{ secrets.NODE_VERSION }}
           cache: 'pnpm'
 
       - name: Install pnpm
@@ -66,10 +66,10 @@ jobs:
         run: pnpm run build
         env:
           NODE_ENV: test
-          DB_HOST: ${{ DB_TEST_HOST }}
-          DB_PORT: ${{ DB_TEST_PORT }}
-          DB_NAME: ${{ DB_TEST_NAME }}
-          DB_USER: ${{ DB_TEST_USER }}
+          DB_HOST: ${{ secrets.DB_TEST_HOST }}
+          DB_PORT: ${{ secrets.DB_TEST_PORT }}
+          DB_NAME: ${{ secrets.DB_TEST_NAME }}
+          DB_USER: ${{ secrets.DB_TEST_USER }}
           DB_PASSWORD: ${{ secrets.DB_TEST_PASSWORD }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
 
@@ -77,10 +77,10 @@ jobs:
         run: pnpm run test
         env:
           NODE_ENV: test
-          DB_HOST: ${{ DB_TEST_HOST }}
-          DB_PORT: ${{ DB_TEST_PORT }}
-          DB_NAME: ${{ DB_TEST_NAME }}
-          DB_USER: ${{ DB_TEST_USER }}
+          DB_HOST: ${{ secrets.DB_TEST_HOST }}
+          DB_PORT: ${{ secrets.DB_TEST_PORT }}
+          DB_NAME: ${{ secrets.DB_TEST_NAME }}
+          DB_USER: ${{ secrets.DB_TEST_USER }}
           DB_PASSWORD: ${{ secrets.DB_TEST_PASSWORD }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
 
@@ -88,10 +88,10 @@ jobs:
         run: pnpm run test:e2e
         env:
           NODE_ENV: test
-          DB_HOST: ${{ DB_TEST_HOST }}
-          DB_PORT: ${{ DB_TEST_PORT }}
-          DB_NAME: ${{ DB_TEST_NAME }}
-          DB_USER: ${{ DB_TEST_USER }}
+          DB_HOST: ${{ secrets.DB_TEST_HOST }}
+          DB_PORT: ${{ secrets.DB_TEST_PORT }}
+          DB_NAME: ${{ secrets.DB_TEST_NAME }}
+          DB_USER: ${{ secrets.DB_TEST_USER }}
           DB_PASSWORD: ${{ secrets.DB_TEST_PASSWORD }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
 
@@ -99,10 +99,10 @@ jobs:
         run: pnpm run test:cov
         env:
           NODE_ENV: test
-          DB_HOST: ${{ DB_TEST_HOST }}
-          DB_PORT: ${{ DB_TEST_PORT }}
-          DB_NAME: ${{ DB_TEST_NAME }}
-          DB_USER: ${{ DB_TEST_USER }}
+          DB_HOST: ${{ secrets.DB_TEST_HOST }}
+          DB_PORT: ${{ secrets.DB_TEST_PORT }}
+          DB_NAME: ${{ secrets.DB_TEST_NAME }}
+          DB_USER: ${{ secrets.DB_TEST_USER }}
           DB_PASSWORD: ${{ secrets.DB_TEST_PASSWORD }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
 
