--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,11 +30,11 @@ jobs:
       postgres:
         image: postgres:15.4
         env:
-          POSTGRES_DB: ${{ env.DB_TEST_NAME }}
-          POSTGRES_USER: ${{ env.DB_TEST_USER }}
+          POSTGRES_DB: banking_test
+          POSTGRES_USER: banking_test_user
           POSTGRES_PASSWORD: ${{ secrets.DB_TEST_PASSWORD }}
         ports:
-          - ${{ env.DB_TEST_PORT }}:5432
+          - 5432:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
