added a secret on github actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,11 +8,13 @@ on:
 
 env:
   NODE_VERSION: '20.x'
-  # Non-sensitive test database configuration
+  # Test database configuration
   DB_TEST_HOST: localhost
   DB_TEST_PORT: 5432
   DB_TEST_NAME: banking_test
   DB_TEST_USER: banking_test_user
+  DB_TEST_PASSWORD: test_password_123
+  JWT_SECRET: test_jwt_secret_123
   
 jobs:
   test:
@@ -32,7 +34,7 @@ jobs:
         env:
           POSTGRES_DB: banking_test
           POSTGRES_USER: banking_test_user
-          POSTGRES_PASSWORD: ${{ secrets.DB_TEST_PASSWORD }}
+          POSTGRES_PASSWORD: test_password_123
         ports:
           - 5432:5432
         options: >-
@@ -70,8 +72,8 @@ jobs:
           DB_PORT: ${{ env.DB_TEST_PORT }}
           DB_NAME: ${{ env.DB_TEST_NAME }}
           DB_USER: ${{ env.DB_TEST_USER }}
-          DB_PASSWORD: ${{ secrets.DB_TEST_PASSWORD }}
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          DB_PASSWORD: ${{ env.DB_TEST_PASSWORD }}
+          JWT_SECRET: ${{ env.JWT_SECRET }}
 
       - name: Run unit tests
         run: pnpm run test
@@ -81,8 +83,8 @@ jobs:
           DB_PORT: ${{ env.DB_TEST_PORT }}
           DB_NAME: ${{ env.DB_TEST_NAME }}
           DB_USER: ${{ env.DB_TEST_USER }}
-          DB_PASSWORD: ${{ secrets.DB_TEST_PASSWORD }}
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          DB_PASSWORD: ${{ env.DB_TEST_PASSWORD }}
+          JWT_SECRET: ${{ env.JWT_SECRET }}
 
       - name: Run integration tests
         run: pnpm run test:e2e
@@ -92,8 +94,8 @@ jobs:
           DB_PORT: ${{ env.DB_TEST_PORT }}
           DB_NAME: ${{ env.DB_TEST_NAME }}
           DB_USER: ${{ env.DB_TEST_USER }}
-          DB_PASSWORD: ${{ secrets.DB_TEST_PASSWORD }}
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          DB_PASSWORD: ${{ env.DB_TEST_PASSWORD }}
+          JWT_SECRET: ${{ env.JWT_SECRET }}
 
       - name: Generate test coverage
         run: pnpm run test:cov
@@ -103,8 +105,8 @@ jobs:
           DB_PORT: ${{ env.DB_TEST_PORT }}
           DB_NAME: ${{ env.DB_TEST_NAME }}
           DB_USER: ${{ env.DB_TEST_USER }}
-          DB_PASSWORD: ${{ secrets.DB_TEST_PASSWORD }}
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          DB_PASSWORD: ${{ env.DB_TEST_PASSWORD }}
+          JWT_SECRET: ${{ env.JWT_SECRET }}
 
       - name: Upload coverage reports
         uses: codecov/codecov-action@v3
