update graphql file and biome confg to graphql

--- a/biome.json
+++ b/biome.json
@@ -45,6 +45,14 @@
     }
   },
   "html": { "formatter": { "selfCloseVoidElements": "always" } },
+  "graphql": {
+    "formatter": {
+      "enabled": true,
+      "indentStyle": "space",
+      "indentWidth": 2,
+      "lineEnding": "lf"
+    }
+  },
   "assist": {
     "enabled": true,
     "actions": { "source": { "organizeImports": "on" } }
