✅ Complete Testing Infrastructure Now Includes: 🔧 Configuration ✅ Jest unit and integration testing ✅ Test database configuration ✅ Environment-specific test settings ✅ Coverage reporting with thresholds 🛠️ Testing Utilities ✅ Database test helpers ✅ Mock data factories ✅ Test module creation utilities 📊 Coverage Reporting ✅ HTML, LCOV, and text reports ✅ Coverage thresholds (70% minimum) ✅ Excludes test files and interfaces from coverage 🎯 Ready for Business Logic Your testing infrastructure is now complete and ready for you to start writing business logic with confidence. Each new feature can be developed with proper test coverage from the start!
Run pnpm run test:cov to see your current coverage report.

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,15 @@ node_modules/
 dist/
 build/
 
-# Environment files
+# Environment files (exclude production/development secrets)
 .env
 .env.local
 .env.*.local
+.env.production
+.env.development
+
+# Test environment files are safe to commit
+# .env.test
 
 # IDE files
 .vscode/
