--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "format:write": "biome format --write src/",
     "check": "biome check src/",
     "check:fix": "biome check --apply src/",
-    "test": "jest --passWithNoTests",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage --passWithNoTests",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json --passWithNoTests",
+    "test": "NODE_ENV=test jest --passWithNoTests",
+    "test:watch": "NODE_ENV=test jest --watch",
+    "test:cov": "NODE_ENV=test jest --coverage --passWithNoTests",
+    "test:debug": "NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "NODE_ENV=test jest --config ./test/jest-e2e.json --passWithNoTests",
+    "test:e2e:cov": "NODE_ENV=test jest --config ./test/jest-e2e.json --coverage --passWithNoTests",
     "db:start": "docker-compose up -d postgres",
     "db:stop": "docker-compose stop postgres",
     "db:logs": "docker-compose logs -f postgres",
@@ -70,8 +71,10 @@
     "@types/node": "^24.2.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/pg": "^8.15.5",
+    "@types/supertest": "^6.0.2",
     "jest": "^30.0.5",
     "nodemon": "^3.1.10",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
