--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "biome lint src/",
-    "lint:fix": "biome lint --apply src/",
+    "lint:fix": "biome lint --write src/",
     "format": "biome format src/",
     "format:write": "biome format --write src/",
     "check": "biome check src/",
-    "check:fix": "biome check --apply src/",
+    "check:fix": "biome check --write src/",
     "test": "NODE_ENV=test jest --passWithNoTests",
     "test:watch": "NODE_ENV=test jest --watch",
     "test:cov": "NODE_ENV=test jest --coverage --passWithNoTests",
